--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "nodemon src/main.js",
-    "watch": "webpack --watch",
+    "watch": "webpack --watch --progress --hide-modules",
     "build": "webpack"
   },
   "repository": {
