--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "express": "^4.16.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "redux": "^4.0.0",
     "socket.io": "^2.1.1",
     "uuid": "^3.2.1"
   },
