--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/HKeca/cards-against-humanity#readme",
   "dependencies": {
     "express": "^4.16.3",
+    "query-string": "^6.1.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
@@ -41,7 +42,7 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
-    "node-sass": "4.9.0",
+    "node-sass": "^4.9.0",
     "sass-loader": "7.0.1",
     "style-loader": "0.21.0",
     "webpack": "4.10.1",
